# icpc2022-jag-domestic

./: Cargo.toml  a.in
domestic-2022-data/: A3  A3.ans  A4  A4.ans  B1  B1.ans  B2  B2.ans  B3  B3.ans  B4  B4.ans  C3  C3.ans  C4  C4.ans  D1.ans  D2  D2.ans  D3  D3.ans  D4  D4.ans  E1  E1.ans  E2  E2.ans  E3  E3.ans  E4  E4.ans  F1  F1.ans  F2  F2.ans  F3  F3.ans  F4  F4.ans  G1  (+3 more)
domestic-2022-data/G/: constraints.h  judge.cpp  testlib.h
domestic-2022-data/H/: constraints.h  judge.cpp
